# ant_upload_checker

./: LICENSE  README.md  changelog.md  film_uploader.py  pyproject.toml  setup.py  test.csv
.github/workflows/: python-app.yml
ant_upload_checker/: banned_groups.py  constants.py  directory_selector.py  dupe_checker.py  film_processing.py  film_processor.py  film_searcher.py  film_searcher_refactored.py  film_uploader.py  main.py  media_info_extractor.py  output.py  parameters.py  setup.py  setup_functions.py  utils.py
ant_upload_checker/tests/: test_dupe_checker.py  test_film_processing.py  test_film_processor.py  test_film_searcher.py  test_media_info_extractor.py  test_setup_functions.py  test_utils.py
dev_requirements/: README.md  dev-requirements.txt  requirements.txt
