[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ANT_upload_checker"
version = "1.4.1"
authors = [
    { name = "pizzaolive"}
]
description = "Check if local films have already been uploaded to ANT"
readme = "README.md"
requires-python=">=3.8"
dependencies = [
    "pandas>2.0","requests>2.0.0","ratelimit>2.0.0","guessit>=3.8.0",
]
[project.optional-dependencies]
test = [
    "pytest>7.0.0"
]

[project.urls]
Homepage = "https://github.com/pizzaolive/ant_upload_checker"
Issues = "https://github.com/pizzaolive/ant_upload_checker/issues"

[tool.setuptools]
py-modules = [] # (see https://github.com/pypa/setuptools/issues/3197#issuecomment-1078770109)