[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ant_upload_checker"
version = "1.6.0"
authors = [
    { name = "pizzaolive"}
]
description = "Check if local films have already been uploaded to ANT"
readme = "README.md"
requires-python=">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "pandas>=2.0",
    "requests>=2.0.0",
    "ratelimit>=2.0.0",
    "guessit>=3.8.0",
    "inquirer>=3.3.0",
    "python-dotenv>=1.0.1"
]
[project.optional-dependencies] 
test = [
    "pytest>7.0.0"
]

[project.urls]
Homepage = "https://github.com/pizzaolive/ant_upload_checker"
Issues = "https://github.com/pizzaolive/ant_upload_checker/issues"

[project.scripts]
ant-upload-checker = "ant_upload_checker.main:main"
